--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,17 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "module": "commonjs",
-      "strict": true,
-      "outDir": "dist",
-      "sourceMap": true,
-      "noImplicitAny": true,
-    },
-    "include": ["src"],
-    "exclude": ["node_modules"]
+	"compilerOptions": {
+		"target": "ESNext",
+		"module": "ESNext",
+		"strict": true,
+		"outDir": "dist",
+		"sourceMap": true,
+		"emitDecoratorMetadata": true,
+		"experimentalDecorators": true,
+		"importHelpers": true,
+		"forceConsistentCasingInFileNames": true,
+		"moduleResolution": "Node",
+		"esModuleInterop": true
+	},
+	"include": ["src"],
+	"exclude": ["node_modules"]
 }
