created basic raid class with the create method

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
 		"moduleResolution": "Node",
 		"esModuleInterop": true
 	},
-	"include": ["src"],
+	"include": ["src/**/*.ts", "tests/**/*.ts"],
 	"exclude": ["node_modules"]
 }
