--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 	},
 	"dependencies": {
 		"@discordjs/rest": "^0.1.0-canary.0",
+		"@discordx/importer": "^1.1.2",
 		"discordx": "^9.0.1"
 	}
 }
